# SAS-Korea_Data-Analysis

./: .gitignore  README.md  main.py  pyproject.toml  rf_model_no_weather.py  submission_final_ensemble.csv  submission_weighted_average.csv
modules/: __init__.py  data_loader.py  model.py  model_optimizer.py  predict.py  preprocessing.py  preprocessor.py  train.py  utils.py
notebooks/JCM/: AutoML.ipynb
notebooks/JCM/모델링/: AutoML.ipynb  AutoML2.ipynb  AutoML3.ipynb  TEST_DATA_predictions1.csv
notebooks/LDY/: 2degree0.ipynb  ensemble_module2.py  ensemble_weighted_average.py  lgbm_test_preds.csv  lgbm_val_preds.csv  mlp_test_preds.csv  mlp_val_preds.csv  rf_test_preds.csv  rf_val_preds.csv  ridge_poly_test_preds.csv  ridge_poly_val_preds.csv  y_test.csv  y_val.csv
notebooks/LHP/: GBM_no_weather_predictions_20250425_115920.csv  XGBoost_season_encoded_predictions_20250424_222547.csv  catboost_model_no_weather.py  gbm_model_no_weather.py  rf_model_no_weather.py  rf_simple_model.py  week2_ver1.ipynb  week2_ver2.ipynb  xgboost_model_2차제출.py  xgboost_model_no_weather.py  xgboost_model_target_season_인코딩.py  xgboost_model_target_인코딩.py  xgboost_model_weather_인코딩.py  결초보은의봄학기_3회차.csv  결초보은의봄학기_4회차.csv  긴급_2차제출.ipynb  모듈_실험_노트북.ipynb  병합_및_2차모듈실험.ipynb
notebooks/LHP/models/: .gitignore
notebooks/LJH/: 1주차_진.ipynb  2주차.ipynb  기온+풍속 추출.ipynb
notebooks/RHJ/: TabNet.ipynb  rnn.ipynb
