[project]
name = "sas-korea-da"
version = "0.1.0"
description = "상권 내 건물의 전력 사용량을 예측하기 위한 데이터 분석 및 머신러닝/딥러닝 모델 개발 프로젝트. 주요 목표는 상권의 에너지 소모 패턴을 파악하고, 효율적인 에너지 관리 및 비용 절감을 위한 인사이트를 제공하는 것입니다."
authors = [
    { name = "p-oong", email = "lhp7505@naver.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "scikit-learn>=1.0",
    "xgboost>=1.6",
    "lightgbm>=3.3",
    "catboost>=1.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "transformers>=4.21",
    "datasets>=2.10",
    "pip (>=25.0.1,<26.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^4.0.0"
black = "^23.1.0"
notebook = "^7.4.0"
jupyterlab = "^4.4.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
